argocd/demo/header-demo/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: header-demo-stable
  namespace: demo
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    app: header-demo
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: header-demo-canary
  namespace: demo
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    app: header-demo
  ports:
    - port: 80
      targetPort: 8080
